--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,9 +24,9 @@ find_package(catkin REQUIRED COMPONENTS
 	visualization_msgs
 	)
 
-add_message_files(
-	FILES
-	)
+# add_message_files(
+#     FILES
+#     )
 
 add_service_files(
 	FILES
